[package]
name = "backend"
version = "0.3.0"
authors = ["Rishi Kothari <itsrishikothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "./src/from_csv.rs"
name = "from_csv"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
bson = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
mongodb = "1.0"
derive_more = "0.99"
tokio = "0.2"
reqwest = { version = "0.10", features = [ "json" ] }
pretty_env_logger = "0.4"
log = "0.4"
csv = "1.1"
chrono = "0.4"
serde_json = "1.0"
regex = "1.3"
lazy_static = "1.4"
futures = "0.3"

[dependencies.hcor]
git = "https://github.com/hackagotchi/hcor.git"
branch = "client_feature"
#path = "../hcor"
features = [ "actix", "mongo" ]
