[package]
name = "backend"
version = "0.3.0"
authors = ["Rishi Kothari <itsrishikothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
path = "./src/main.rs"
name = "server"

[[bin]]
path = "./src/from_csv.rs"
name = "from_csv"

[dependencies]

# logging
log = "0.4"
pretty_env_logger = "0.4"

# util
derive_more = "0.99"
lazy_static = "1.4"
regex = "1.3"
futures = "0.3"

# serialization/deserialization
csv = "1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# web
actix-web = "2.0"
actix-rt = "1.0"
reqwest = { version = "0.10", features = [ "json" ] }

# it's important that these are the same as sqlx's
tokio = { version = "0.2", features = [ "macros" ] }
chrono = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
[dependencies.sqlx]
version = "0.3"
features = [
    "chrono",
    "uuid",
    "runtime-tokio",
    "postgres",
    "macros"
] 
default_features = false

[dependencies.hcor]
#git = "https://github.com/hackagotchi/hcor.git"
#branch = "slim"
path = "../hcor"
features = [ "actix"  ]
